--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/runtime": "^7.3.4",
     "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react-native": "0.56.0",
+    "react-native-gesture-handler": "^1.1.0",
+    "react-native-vector-icons": "^6.4.1"
   },
   "devDependencies": {
     "babel-jest": "24.5.0",
