Login page added

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": ["react-native"]
+  "presets": ["react-native"],
+  "plugins": [
+    ["module-resolver", {
+      "cwd": "babelrc",
+      "root": ["./src"],
+      "alias": {
+        "@api": "./src/api",
+        "@assets": "./src/assets",
+        "@components": "./src/components",
+        "@pages": "./src/pages"
+      }
+    }]
+  ]
 }
